/*
 * Copyright ConsenSys AG.
 *
 * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
 * the License. You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
 * an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
 * specific language governing permissions and limitations under the License.
 *
 * SPDX-License-Identifier: Apache-2.0
 */

// we use this config to get the path of the JDK 9 javac jar, to
// stick it in the bootclasspath when running tests
configurations.maybeCreate("epJavac")


apply plugin: 'java'
apply plugin: 'net.ltgt.errorprone'

sourceCompatibility = 11
targetCompatibility = 11

dependencies {
  api 'org.slf4j:slf4j-api'

  annotationProcessor 'com.google.auto.service:auto-service'

  implementation 'com.google.auto.service:auto-service'
  implementation 'com.google.errorprone:error_prone_annotation'
  implementation 'com.google.errorprone:error_prone_core'
  implementation 'info.picocli:picocli'

  testImplementation 'com.google.errorprone:error_prone_test_helpers'
  testImplementation 'junit:junit'
  testImplementation 'org.assertj:assertj-core'
  testImplementation 'org.junit.jupiter:junit-jupiter'

  testRuntimeOnly 'org.junit.vintage:junit-vintage-engine'

  epJavac 'com.google.errorprone:error_prone_check_api'
}

test { testLogging { showStandardStreams = true } }


tasks.withType(JavaCompile) {
  options.compilerArgs += [
    '--add-exports',
    'jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
    '--add-exports',
    'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
    '--add-exports',
    'jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
    '--add-exports',
    'jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
    '--add-exports',
    'jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
    '--add-exports',
    'jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
    '--add-exports',
    'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
    '--add-exports',
    'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
  ]
}

javadoc { enabled = false }
